Fixed the cropping in admin, changed the z score for all headers

--- a/src/app/components/recommend-modal/recommend-modal.component.css
+++ b/src/app/components/recommend-modal/recommend-modal.component.css
@@ -4,7 +4,7 @@
 
 .container {
   padding: 20px;
-  z-index: 9999 !important;
+  z-index: 99999999999999 !important;
   position: relative;
 }
 
